@@ -1,5 +1,10 @@
 2015-10-31  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* install-info/tests/defs.in: Add commented-out for running with 
+	valgrind.
+
+2015-10-31  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* README-hacking: Mention purposes of subdirectories, couple of 
 	more checks for a release.
 
